[package]
name = "dansim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive", "env"] }
humantime = "*"
rand="*"
itertools= "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
